name:                nyfl
version:             0.1.0.0
synopsis:            Not yet a functional programming language
-- description:         
homepage:            http://github.com/nobsun/nyfl
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
